--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "scripts": {
     "dev": "vite",
     "dev:3000": "vite --port 3000",
-    "build": "tsc -b && vite build",
+    "build": "pnpm panda codegen && tsc -b && vite build",
     "lint": "eslint .",
     "start": "vite preview",
     "test": "jest",
-    "test:auto": "jest --watch --coverage"
+    "test:auto": "jest --watch --coverage",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
+    "panda": "panda codegen"
   },
   "dependencies": {
     "react": "^19.2.1",
@@ -19,6 +22,8 @@
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@jest/globals": "^30.2.0",
+    "@pandacss/dev": "^1.6.1",
+    "@pandacss/postcss": "^1.6.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
@@ -39,6 +44,18 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.48.1",
-    "vite": "^7.2.6"
+    "vite": "^7.2.6",
+    "storybook": "^10.1.4",
+    "@storybook/react-vite": "^10.1.4",
+    "@chromatic-com/storybook": "^4.1.3",
+    "@storybook/addon-vitest": "^10.1.4",
+    "@storybook/addon-a11y": "^10.1.4",
+    "@storybook/addon-docs": "^10.1.4",
+    "@storybook/addon-onboarding": "^10.1.4",
+    "eslint-plugin-storybook": "^10.1.4",
+    "vitest": "^4.0.15",
+    "playwright": "^1.57.0",
+    "@vitest/browser-playwright": "^4.0.15",
+    "@vitest/coverage-v8": "^4.0.15"
   }
 }
